fixed the hamburber issue.  #paragraph was overlapping the .menu__box and it drove me crazy

--- a/Responsive.css
+++ b/Responsive.css
@@ -359,10 +359,6 @@ ul {
   padding: 0%;
 }
 
-#nav-links {
-  list-style-type: none;
-}
-
 li {
   font-family: Montserrat;
   font-weight: 600;
@@ -400,16 +396,14 @@ div h1 {
   font-size: 25px;
 }
 
-#paragraph {
+.paragraph {
   color: rgb(255, 255, 255);
   font-family: Zilla Slab;
   text-align: center;
   font-size: 25px;
   letter-spacing: 0.25px;
-  position: relative;
-  top: 22.5%;
   line-height: 20px;
-  margin: 0 auto;
+  margin: 82px auto;
 }
 
 .box1 {
@@ -439,6 +433,7 @@ div h1 {
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
   width: 80%;
   height: 60px;
+  z-index: 2;
 }
 
 input::placeholder {
@@ -468,5 +463,84 @@ footer p {
 
   footer p {
     height: 150px;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .menu__item {
+    list-style-type: none;
+  }
+
+  #menu__toggle {
+    opacity: 0;
+  }
+  #menu__toggle:checked + .menu__btn > span {
+    transform: rotate(45deg);
+  }
+  #menu__toggle:checked + .menu__btn > span::before {
+    top: 0;
+    transform: rotate(0deg);
+  }
+  #menu__toggle:checked + .menu__btn > span::after {
+    top: 0;
+    transform: rotate(90deg);
+  }
+  #menu__toggle:checked ~ #menu__box {
+    left: 0 !important;
+  }
+  .menu__btn {
+    position: fixed;
+    top: 20px;
+    left: 20px;
+    width: 26px;
+    height: 26px;
+    cursor: pointer;
+    z-index: 1;
+  }
+  .menu__btn > span,
+  .menu__btn > span::before,
+  .menu__btn > span::after {
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    background-color: #616161;
+    transition-duration: 0.25s;
+  }
+  .menu__btn > span::before {
+    content: "";
+    top: -8px;
+  }
+  .menu__btn > span::after {
+    content: "";
+    top: 8px;
+  }
+  #menu__box {
+    display: block;
+    position: fixed;
+    top: 80px;
+    left: -100%;
+    width: 100%;
+    height: 200px;
+    margin: 0;
+    padding: 80px 0;
+    list-style: none;
+    background-color: #eceff1;
+    box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.4);
+    transition-duration: 0.25s;
+    z-index: 3;
+  }
+  .menu__item {
+    display: block;
+    padding: 12px 24px;
+    color: #333;
+    font-family: "Roboto", sans-serif;
+    font-size: 20px;
+    font-weight: 600;
+    text-decoration: none;
+    transition-duration: 0.25s;
+  }
+  .menu__item:hover {
+    background-color: #cfd8dc;
   }
 }
